--- a/src/utils/Css/index.css
+++ b/src/utils/Css/index.css
@@ -47,3 +47,25 @@
 input {
     box-shadow: none !important;
 }
+
+.container-progress {
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(20, 16, 28, 0.60);
+    display: flex;
+    z-index: 100;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+
+
+
+
+:where(.css-dev-only-do-not-override-1hyej8k).ant-progress.ant-progress-circle .ant-progress-text {
+    color: rgba(225, 225, 225, 1);
+}
