feat: :sparkles: Historia de archivos cargados
nueva estructura

--- a/src/utils/Css/index.scss
+++ b/src/utils/Css/index.scss
@@ -123,3 +123,8 @@ input[type='text'] {
   min-height: 38px !important;
 }
 
+.modal-patients .ant-modal-content {
+  padding: 0 !important;
+  background-color: transparent !important;
+}
+
