--- a/src/utils/Css/index.scss
+++ b/src/utils/Css/index.scss
@@ -122,8 +122,8 @@ input[type='text'] {
 }
 
 .modal-patients .ant-modal-content {
-  padding: 0 !important;
-  background-color: transparent !important;
+  //padding: 0 !important;
+  //background-color: transparent !important;
 }
 
 .ant-popover {
