--- a/src/utils/Css/tableGeneric.scss
+++ b/src/utils/Css/tableGeneric.scss
@@ -25,7 +25,7 @@
 }
 
 .ant-table-thead>tr>th {
-    padding: 5px 5px 0px 8px !important;
+    padding: 2px 5px 0px 8px !important;
     color: #4b4b4b;
     background-color: #ffffff !important;
 }
@@ -36,6 +36,7 @@
 
 .ant-table-tbody>tr>td {
     padding: 2px !important;
+    cursor: pointer !important;
 }
 
 
@@ -47,11 +48,10 @@
     border-color: #e2e2e3 !important;
 }
 
-
 .ant-table-thead>tr>th {
     color: #4b4b4b;
     background-color: #e4e4e4 !important;
-    border: 0.1em solid rgb(188, 188, 188) !important;
+    border: 0.0001vw solid rgb(188, 188, 188) !important;
 }
 
 .ant-table.ant-table-bordered>.ant-table-container>.ant-table-content>table {
