--- a/src/utils/Css/index.scss
+++ b/src/utils/Css/index.scss
@@ -1,3 +1,12 @@
+.inputCells {
+  outline: none;
+  border: 0;
+  margin: 0;
+  padding: 0; 
+  height: 20px !important;
+  width: 100%;
+}
+
 .card-menu-home {
   transition: all 0.1s ease;
   cursor: pointer;
@@ -113,7 +122,7 @@ input {
   align-items: center;
 }
 
-input[type='text'] {
+input[type='text']:not(.inputCells) {
   min-height: 38px;
 }
 
