--- a/src/utils/Css/FormRegister.css
+++ b/src/utils/Css/FormRegister.css
@@ -2,11 +2,12 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 .viewPassword_register_user {
     position: absolute;
-    margin-left: 85%;
-    margin-top: 8px;
+    margin-left: 46%;
+    margin-top: 6px;
     color: blue;
     cursor: pointer;
     z-index: 8;
